Mergeing Dev into Main (#185)
* Updating the keycloack import script

* Using header auth/sessiontransport instead of cookies

* Authenticating use header auth

* Handling current user requests correctly

* Adding some comments regarding akka.http.session

* linter updates

* updating readme file

* Updating readme file

* Adding linking ability

* chore: update keycloak env

* updating threshold updater

* feat: update dev build

* fix: api client undefined headers

* Updating mu a,b,c,d

* Add keycloak env vars for high server configuration

* fix: build time warning

* fix: runtime warning

* Adding unit test

* Update to the model

* chore: enhance top bar padding

* updating haproxy config

* small typo

* updating keycloack api name

* fix: review link undefined uid

* Working on the field matrix tests

* chore: hide browse search

* feat: implement import dashboard widget

* Updating kafka logic

* Making starting keycloak conditional (default to false)

* updating readme file

* partial scala-em

* partial scala-em

* partial scala-em

* partial scala-em

* partial scala-em

* partial scala-em & database script cleanup

* partial scala-em & database scripts & keycloak

* partial scala-em & database script cleanup & keycloak/ui scripts

* partial em integration

* Dockerized the bootstrapper app

* Small updates to dockerized container

* Using the bootstrapper instead to create schemas

* partial em integration

* Add Sync Link interaction and re-format all java files using JeMPI_java_code_style.xml in root folder

* chore: merge dev branch and update env

* Updating the m and u calcution logic

* Working on global ktable wrapper

* Working on global kTable

* Updates to global table data

* Updating global topic logic

* Updating Ktable tests

* Updating Kafka global tables

* updating global table kafka

* Updating kafka logic

* Updating the m and u